fix horizontal scrolllbar in the mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -406,11 +406,11 @@ footer h5 {
 /*  START of mobile media query */
 @media (max-width: 500px) {
   .container {
-    width: 100%;
+    width: 90%;
   }
 
   header nav {
-    width: 100%;
+    width: 90%;
     flex-direction: column-reverse;
   }
 
@@ -461,6 +461,7 @@ footer h5 {
 
   .jumbotron-container .jumbotron-text {
     margin-top: 50px;
+    margin-right: 10px;
   }
 
   .top-main-container,
